Fixing strokes on mobile.

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,5 +1,5 @@
 :root {
   .custom-blue {
-    color: rgba(25, 115, 155, 0.4);
+    color: rgba(25, 115, 155, 0.7);
   }
 }
